# tamuctf-2022

./: .gitignore  README.md
crypto/indie-co/: README.md  original_solve.py
crypto/rs-ayyy-how-you-doin/: Dockerfile  README.md  flag.txt
crypto/take-a-byte/: README.md
crypto/viktor/: Dockerfile  Makefile  README.md  create.py  run.sh  solve.py  solver-template.py
forensics/lost-in-the-void/: Cargo.toml  README.md  flag.txt
forensics/lost-in-the-void/src/: main.rs
forensics/non-stick-disk/: .gitignore  README.md  create_image.sh
forensics/plain/: README.md
forensics/taxes/: README.md
forensics/vanity/: README.md
forensics/whats-the-difference/: README.md
misc/gamer/: README.md  sus.txt
misc/gilbertos-brother/: README.md
misc/got-skills/: README.md
misc/hear_me_out/: README.md
misc/sokorazy/: Cargo.toml  Dockerfile  README.md
misc/sokorazy/src/: main.rs  solver.rs
pwn/ctf-sim/: Dockerfile  Makefile  README.md  flag.txt  solve.py
pwn/live-math-love/: Makefile  README.md  flag.txt  solve.py
pwn/lucky/: Dockerfile  Makefile  README.md  flag.txt  solve.py
pwn/one-and-done/: Dockerfile  Makefile  README.md  flag.txt  solve.py  tcp-server.c
pwn/quick_mafs/: Dockerfile  Makefile  README.md  brute-solve.py  chall.py  flag.txt  solve.py
pwn/rop_golf/: Dockerfile  Makefile  README.md  flag.txt  solve.py
pwn/sacrifice/: README.md  flag.txt
pwn/shmeeky/: Dockerfile  Makefile  flag.txt  pwn.c  readme.md  run_socat.sh  solve.py  solver-template.py
pwn/spiked-soup/: Dockerfile  run.sh  (+4 more)
reversing/obsessive-checking/: Cargo.toml  README.md
reversing/obsessive-checking/src/: encrypt.rs  main.rs
(+57 files in other folders)
