[package]
name = "lost-in-the-void"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = { git = "https://github.com/RustCrypto/RSA.git" }
tokio = { version = "1.17.0", features = ["full"] }
zeroize = "1.4"
