[package]
name = "sokorazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
heapless = "0.7"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.5.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
sokoban = "0.1.2"
tokio = { version = "1.17", features = ["full"] }

[[bin]]
name = "sokorazy"
path = "src/main.rs"

[[bin]]
name = "solver"
path = "src/solver.rs"
