[package]
name = "obsessive-checking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
anyhow = "1"
cbc = "0.1.1"
obfstr = "0.3"
rand_chacha = "0.3.1"
rand = "0.8.5"
sha3 = "0.10.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
typenum = "1.15.0"

[profile.release]
codegen-units = 1
debug = false
lto = true

[[bin]]
name = "obsessive-checking"
path = "src/main.rs"

[[bin]]
name = "encrypt"
path = "src/encrypt.rs"
